log
Sat Mar 12 16:40:17 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1fb5a50
Sat Mar 12 16:42:10 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e8b8060
Sat Mar 12 16:47:39 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
fdb787b
Sat Mar 12 16:49:24 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
78bef8a
Sat Mar 12 16:53:12 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3039178
Sat Mar 12 17:00:29 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
eebe18a
Sat Mar 12 17:02:27 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
61c9d49
Sat Mar 12 17:02:51 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e62161e
Sat Mar 12 17:03:47 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
385f75e
Sat Mar 12 17:04:52 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0ec8122
Sat Mar 12 17:05:43 HSP 2022: 
 tests:  1|6
total_score: 10/70
320cedb
Sun Mar 13 21:19:34 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
5109f75
Sun Mar 13 21:26:25 UTC 2022: 
 tests:  1|6
total_score: 10/70
4b17ddf
Sun Mar 13 21:29:25 UTC 2022: 
 tests:  1|6
total_score: 10/70
93e3a5d
Sun Mar 13 21:36:31 UTC 2022: 
 tests:  1|6
total_score: 10/70
d87e5b9
Sun Mar 13 21:37:32 UTC 2022: 
 tests:  1|6
total_score: 10/70
33752e5
